# Zenith

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
src/core/: CMakeLists.txt  types.h
src/core/image-handler/: CMakeLists.txt  image.cpp  image.h
src/core/image-handler/formats/: CMakeLists.txt  fits.cpp  fits.h
src/core/images/: CMakeLists.txt  image.cpp  image.h
src/core/images/formats/: fits.cpp  fits.h
src/core/processes/: CMakeLists.txt
src/core/processes/image-integration/: CMakeLists.txt  integration.cpp  integration.h
src/core/processes/image-integration/algorithms/: CMakeLists.txt  average.cpp  average.h
src/dialogs/: AboutQtDialog.cpp  AboutQtDialog.h  AboutZenithDialog.cpp  AboutZenithDialog.h  CMakeLists.txt
src/preferences/: AppPreferences.cpp  AppPreferences.h  CMakeLists.txt  PreferencesDialog.cpp  PreferencesDialog.h
src/preferences/categories/: AppearancePreferences.cpp  AppearancePreferences.h  GeneralPreferences.cpp  GeneralPreferences.h
src/services/: CMakeLists.txt
src/services/Console/: ConsoleManager.cpp  ConsoleManager.h  ConsoleModel.cpp  ConsoleModel.h  ConsoleView.cpp  ConsoleView.h
src/services/FilePicker/: FilePickerManager.cpp  FilePickerManager.h
src/services/file-picker/: CMakeLists.txt  handler.cpp  handler.h
src/workspace/: CMakeLists.txt  ImageRenderer.cpp  ImageRenderer.h  ImageView.cpp  ImageView.h  WorkspaceManager.cpp  WorkspaceManager.h  WorkspaceView.cpp  WorkspaceView.h
